Ingreso de fichas clínicas a pacientes

--- a/public/css/theme-default.css
+++ b/public/css/theme-default.css
@@ -28,12 +28,12 @@
   clear: both;
 }
 .background-colorful {
-  background: linear-gradient(left, #E04B4A 0%, #1caf9a 50%, #95b75d 100%);
-  background: -o-linear-gradient(left, #E04B4A 0%, #1caf9a 50%, #95b75d 100%);
-  background: -moz-linear-gradient(left, #E04B4A 0%, #1caf9a 50%, #95b75d 100%);
-  background: -webkit-linear-gradient(left, #E04B4A 0%, #1caf9a 50%, #95b75d 100%);
-  background: -ms-linear-gradient(left, #E04B4A 0%, #1caf9a 50%, #95b75d 100%);
-  background: -webkit-gradient(linear, left top, right top, color-stop(0, #E04B4A), color-stop(0.5, #1caf9a), color-stop(1, #95b75d));
+  background: linear-gradient(left, #E04B4A 0%, #387192 50%, #95b75d 100%);
+  background: -o-linear-gradient(left, #E04B4A 0%, #387192 50%, #95b75d 100%);
+  background: -moz-linear-gradient(left, #E04B4A 0%, #387192 50%, #95b75d 100%);
+  background: -webkit-linear-gradient(left, #E04B4A 0%, #387192 50%, #95b75d 100%);
+  background: -ms-linear-gradient(left, #E04B4A 0%, #387192 50%, #95b75d 100%);
+  background: -webkit-gradient(linear, left top, right top, color-stop(0, #E04B4A), color-stop(0.5, #387192), color-stop(1, #95b75d));
 }
 /* EOF PREDEFINED CLASSES */
 html * {
@@ -373,7 +373,7 @@ body.page-container-boxed .page-container {
   content: "\f147";
 }
 .x-navigation li.active > a {
-  background: #1caf9a;
+  background: #387192;
   color:#fff;
   -webkit-transition: all 200ms ease;
   -moz-transition: all 200ms ease;
@@ -908,10 +908,10 @@ body.page-container-boxed .page-container {
  color: #FFF;
  height: 50px;
  text-align: center;
- background: #1caf9a;
+ background: #387192;
 }
 .x-navigation > li.xn-logo > a:first-child:hover {
-  background-color: #1caf9a;
+  background-color: #387192;
 }
 .x-navigation > li.xn-profile {
   padding: 0px;
@@ -961,10 +961,10 @@ body.page-container-boxed .page-container {
   background: #95b75d;
 }
 .x-navigation .informer.informer-info {
-  background: #1caf9a;
+  background: #387192;
 }
 .x-navigation .informer.informer-warning {
-  background: #1caf9a;
+  background: #387192;
 }
 .x-navigation .informer.informer-danger {
   background: #E04B4A;
@@ -1367,7 +1367,7 @@ a.list-group-item:focus {
   background: #95b75d;
 }
 .list-group-status.status-away:after {
-  background: #1caf9a;
+  background: #387192;
 }
 .list-group-status.status-offline:after {
   background: #CCC;
@@ -1437,10 +1437,10 @@ a.list-group-item:focus {
   border-top-color: #95b75d;
 }
 .panel.panel-info {
-  border-top-color: #1caf9a;
+  border-top-color: #387192;
 }
 .panel.panel-warning {
-  border-top-color: #1caf9a;
+  border-top-color: #387192;
 }
 .panel.panel-danger {
   border-top-color: #E04B4A;
@@ -1449,12 +1449,12 @@ a.list-group-item:focus {
   content: "";
   width: 100%;
   height: 2px;
-  background: linear-gradient(left, #E04B4A 0%, #1caf9a 50%, #95b75d 100%);
-  background: -o-linear-gradient(left, #E04B4A 0%, #1caf9a 50%, #95b75d 100%);
-  background: -moz-linear-gradient(left, #E04B4A 0%, #1caf9a 50%, #95b75d 100%);
-  background: -webkit-linear-gradient(left, #E04B4A 0%, #1caf9a 50%, #95b75d 100%);
-  background: -ms-linear-gradient(left, #E04B4A 0%, #1caf9a 50%, #95b75d 100%);
-  background: -webkit-gradient(linear, left top, right top, color-stop(0, #E04B4A), color-stop(0.5, #1caf9a), color-stop(1, #95b75d));
+  background: linear-gradient(left, #E04B4A 0%, #387192 50%, #95b75d 100%);
+  background: -o-linear-gradient(left, #E04B4A 0%, #387192 50%, #95b75d 100%);
+  background: -moz-linear-gradient(left, #E04B4A 0%, #387192 50%, #95b75d 100%);
+  background: -webkit-linear-gradient(left, #E04B4A 0%, #387192 50%, #95b75d 100%);
+  background: -ms-linear-gradient(left, #E04B4A 0%, #387192 50%, #95b75d 100%);
+  background: -webkit-gradient(linear, left top, right top, color-stop(0, #E04B4A), color-stop(0.5, #387192), color-stop(1, #95b75d));
   display: block;
   left: 0px;
   top: 0px;
@@ -1524,7 +1524,7 @@ a.list-group-item:focus {
   position: absolute;
   bottom: -15px;
   left: 50%;
-  background: #1caf9a;
+  background: #387192;
   color: #FFF;
   -moz-border-radius: 0px;
   -webkit-border-radius: 0px;
@@ -1545,7 +1545,7 @@ a.list-group-item:focus {
   background: #95b75d;
 }
 .panel .panel-body.panel-body-image .panel-body-inform.inform-warning {
-  background: #1caf9a;
+  background: #387192;
 }
 .panel .panel-body.panel-body-image .panel-body-inform.inform-danger {
   background: #E04B4A;
@@ -1685,12 +1685,12 @@ ul.panel-controls > li > a.control-success {
   border-color: #95b75d;
 }
 ul.panel-controls > li > a.control-info {
-  color: #1caf9a;
-  border-color: #1caf9a;
+  color: #387192;
+  border-color: #387192;
 }
 ul.panel-controls > li > a.control-warning {
-  color: #1caf9a;
-  border-color: #1caf9a;
+  color: #387192;
+  border-color: #387192;
 }
 ul.panel-controls > li > a.control-danger {
   color: #E04B4A;
@@ -1772,10 +1772,10 @@ ul.panel-controls > li > .dropdown-menu:before {
   color: #95b75d;
 }
 .panel.panel-info .panel-body-pricing small {
-  color: #1caf9a;
+  color: #387192;
 }
 .panel.panel-warning .panel-body-pricing small {
-  color: #1caf9a;
+  color: #387192;
 }
 .panel.panel-danger .panel-body-pricing small {
   color: #E04B4A;
@@ -1878,10 +1878,10 @@ ul.panel-controls > li > .dropdown-menu:before {
   border-bottom-color: #1b1e24;
 }
 .x-navigation li > .panel.panel-info:after {
-  border-bottom-color: #1caf9a;
+  border-bottom-color: #387192;
 }
 .x-navigation li > .panel.panel-warning:after {
-  border-bottom-color: #1caf9a;
+  border-bottom-color: #387192;
 }
 .x-navigation li > .panel.panel-danger:after {
   border-bottom-color: #E04B4A;
@@ -2049,8 +2049,8 @@ ul.panel-controls > li > .dropdown-menu:before {
   border-color: #2c313b;
 }
 .btn-info {
-  background-color: #1caf9a;
-  border-color: #1caf9a;
+  background-color: #387192;
+  border-color: #387192;
 }
 .btn-info:hover,
 .btn-info:focus,
@@ -2118,7 +2118,7 @@ ul.panel-controls > li > .dropdown-menu:before {
   color: #fe970a;
 }
 .btn.btn-rounded.btn-info {
-  color: #1caf9a;
+  color: #387192;
 }
 .btn.btn-rounded.btn-info:hover,
 .btn.btn-rounded.btn-info:focus,
@@ -2318,10 +2318,10 @@ input[type=checkbox] {
 .has-warning .radio-inline,
 .has-warning .checkbox-inline,
 .has-warning .form-control-feedback {
-  color: #1caf9a;
+  color: #387192;
 }
 .has-warning .form-control {
-  border-color: #1caf9a;
+  border-color: #387192;
 }
 .has-error .help-block,
 .has-error .control-label,
@@ -2386,11 +2386,11 @@ label.valid {
 }
 .label-info,
 .badge-info {
-  background-color: #1caf9a;
+  background-color: #387192;
 }
 .label-warning,
 .badge-warning {
-  background-color: #1caf9a;
+  background-color: #387192;
 }
 .label-danger,
 .badge-danger {
@@ -2410,12 +2410,12 @@ label.valid {
   border-color: #90b456;
 }
 .alert-info {
-  background-color: #1caf9a;
+  background-color: #387192;
   color: #FFF;
   border-color: #36b7e3;
 }
 .alert-warning {
-  background-color: #1caf9a;
+  background-color: #387192;
   color: #FFF;
   border-color: #fe9e19;
 }
@@ -2625,13 +2625,13 @@ blockquote.pull-right {
   border-left-color: #95b75d;
 }
 .blockquote-info {
-  border-left-color: #1caf9a;
+  border-left-color: #387192;
 }
 .blockquote-danger {
   border-left-color: #E04B4A;
 }
 .blockquote-warning {
-  border-left-color: #1caf9a;
+  border-left-color: #387192;
 }
 .text-title {
   font-weight: 600;
@@ -2702,10 +2702,10 @@ blockquote.pull-right {
   color: #95b75d !important;
 }
 .text-info {
-  color: #1caf9a !important;
+  color: #387192 !important;
 }
 .text-warning {
-  color: #1caf9a !important;
+  color: #387192 !important;
 }
 .text-danger {
   color: #E04B4A !important;
@@ -2720,11 +2720,11 @@ blockquote.pull-right {
 }
 .bg-info {
   color: #fff;
-  background-color: #1caf9a;
+  background-color: #387192;
 }
 .bg-warning {
   color: #fff;
-  background-color: #1caf9a;
+  background-color: #387192;
 }
 .bg-danger {
   color: #fff;
@@ -2764,21 +2764,21 @@ blockquote.pull-right {
   background-color: #95b75d;
 }
 .progress-bar-warning {
-  background-color: #1caf9a;
+  background-color: #387192;
 }
 .progress-bar-danger {
   background-color: #E04B4A;
 }
 .progress-bar-info {
-  background-color: #1caf9a;
+  background-color: #387192;
 }
 .progress-bar-colorful {
-  background: linear-gradient(left, #E04B4A 0%, #1caf9a 50%, #95b75d 100%);
-  background: -o-linear-gradient(left, #E04B4A 0%, #1caf9a 50%, #95b75d 100%);
-  background: -moz-linear-gradient(left, #E04B4A 0%, #1caf9a 50%, #95b75d 100%);
-  background: -webkit-linear-gradient(left, #E04B4A 0%, #1caf9a 50%, #95b75d 100%);
-  background: -ms-linear-gradient(left, #E04B4A 0%, #1caf9a 50%, #95b75d 100%);
-  background: -webkit-gradient(linear, left top, right top, color-stop(0, #E04B4A), color-stop(0.5, #1caf9a), color-stop(1, #95b75d));
+  background: linear-gradient(left, #E04B4A 0%, #387192 50%, #95b75d 100%);
+  background: -o-linear-gradient(left, #E04B4A 0%, #387192 50%, #95b75d 100%);
+  background: -moz-linear-gradient(left, #E04B4A 0%, #387192 50%, #95b75d 100%);
+  background: -webkit-linear-gradient(left, #E04B4A 0%, #387192 50%, #95b75d 100%);
+  background: -ms-linear-gradient(left, #E04B4A 0%, #387192 50%, #95b75d 100%);
+  background: -webkit-gradient(linear, left top, right top, color-stop(0, #E04B4A), color-stop(0.5, #387192), color-stop(1, #95b75d));
 }
 /* EOF PROGRESS BARS */
 /* SWITCH */
@@ -3382,17 +3382,17 @@ td.dataTables_empty {
   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr=#95b75d, endColorstr=#89ad4d, GradientType=0);
 }
 .widget.widget-info {
-background: #1caf9a !important;
+background: #387192 !important;
 }
 .widget.widget-warning {
-  background: #1caf9a;
-  background: -moz-linear-gradient(top, #1caf9a 0%, #fe970a 100%);
-  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #1caf9a), color-stop(100%, #fe970a));
-  background: -webkit-linear-gradient(top, #1caf9a 0%, #fe970a 100%);
-  background: -o-linear-gradient(top, #1caf9a 0%, #fe970a 100%);
-  background: -ms-linear-gradient(top, #1caf9a 0%, #fe970a 100%);
-  background: linear-gradient(to bottom, #1caf9a 0%, #fe970a 100%);
-  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr=#1caf9a, endColorstr=#fe970a, GradientType=0);
+  background: #387192;
+  background: -moz-linear-gradient(top, #387192 0%, #fe970a 100%);
+  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #387192), color-stop(100%, #fe970a));
+  background: -webkit-linear-gradient(top, #387192 0%, #fe970a 100%);
+  background: -o-linear-gradient(top, #387192 0%, #fe970a 100%);
+  background: -ms-linear-gradient(top, #387192 0%, #fe970a 100%);
+  background: linear-gradient(to bottom, #387192 0%, #fe970a 100%);
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr=#387192, endColorstr=#fe970a, GradientType=0);
 }
 .widget.widget-danger {
   background: #E04B4A;
@@ -3655,8 +3655,8 @@ background: #1caf9a !important;
   background: #90b456;
 }
 .tile.tile-warning {
-  background: #1caf9a;
-  border-color: #1caf9a;
+  background: #387192;
+  border-color: #387192;
 }
 .tile.tile-warning:hover {
   background: #fe9e19;
@@ -3669,8 +3669,8 @@ background: #1caf9a !important;
   background: #af4342;
 }
 .tile.tile-info {
-  background: #1caf9a;
-  border-color: #1caf9a;
+  background: #387192;
+  border-color: #387192;
 }
 .tile.tile-info:hover {
   background: #36b7e3;
@@ -3708,10 +3708,10 @@ background: #1caf9a !important;
   color: #95b75d;
 }
 .tile .informer.informer-info {
-  color: #1caf9a;
+  color: #387192;
 }
 .tile .informer.informer-warning {
-  color: #1caf9a;
+  color: #387192;
 }
 .tile .informer.informer-danger {
   color: #E04B4A;
@@ -3951,7 +3951,7 @@ background: #1caf9a !important;
   color: #FFF;
 }
 .login-container .login-box .login-body .login-subtitle a {
-  color: #1caf9a;
+  color: #387192;
 }
 .login-container .login-box .login-footer {
   width: 100%;
@@ -4293,10 +4293,10 @@ background: #1caf9a !important;
   border-left-color: #95b75d;
 }
 .tasks .task-item.task-info {
-  border-left-color: #1caf9a;
+  border-left-color: #387192;
 }
 .tasks .task-item.task-warning {
-  border-left-color: #1caf9a;
+  border-left-color: #387192;
 }
 .tasks .task-item.task-danger {
   border-left-color: #E04B4A;
@@ -4373,13 +4373,13 @@ background: #1caf9a !important;
   background: #1b1e24;
 }
 .mpb .mpb-progress.mpb-warning {
-  background: #1caf9a;
+  background: #387192;
 }
 .mpb .mpb-progress.mpb-success {
   background: #95b75d;
 }
 .mpb .mpb-progress.mpb-info {
-  background: #1caf9a;
+  background: #387192;
 }
 .mpb .mpb-progress.mpb-danger {
   background: #E04B4A;
@@ -4619,7 +4619,7 @@ background: #1caf9a !important;
   padding-bottom: 15px;
 }
 .faq .faq-highlight {
-  background: #1caf9a;
+  background: #387192;
   color: #FFF;
   padding: 0px 5px;
   -moz-border-radius: 3px;
@@ -4926,7 +4926,7 @@ background: #1caf9a !important;
   height: 36px;
   width: 36px;
   top: 10px;
-  background: #1caf9a;
+  background: #387192;
   -moz-border-radius: 5px 0px 0px 5px;
   -webkit-border-radius: 5px 0px 0px 5px;
   border-radius: 5px 0px 0px 5px;
@@ -5085,13 +5085,13 @@ background: #1caf9a !important;
   border-left-color: #1b1e24;
 }
 .mail .mail-item.mail-info {
-  border-left-color: #1caf9a;
+  border-left-color: #387192;
 }
 .mail .mail-item.mail-success {
   border-left-color: #95b75d;
 }
 .mail .mail-item.mail-warning {
-  border-left-color: #1caf9a;
+  border-left-color: #387192;
 }
 .mail .mail-item.mail-danger {
   border-left-color: #E04B4A;
@@ -5111,7 +5111,7 @@ background: #1caf9a !important;
   cursor: pointer;
 }
 .mail .mail-item .mail-star.starred {
-  color: #1caf9a;
+  color: #387192;
 }
 .mail .mail-item .mail-star.starred .fa-star-o:before {
   content: "\f005";
@@ -6362,12 +6362,12 @@ div.tagsinput div {
 }
 .fc-event-skin.orange,
 .fc-event.orange {
-  background-color: #1caf9a;
+  background-color: #387192;
   border-color: #fe970a;
 }
 .fc-event-skin.blue,
 .fc-event.blue {
-  background-color: #1caf9a;
+  background-color: #387192;
   border-color: #29b2e1;
 }
 /* eof calendar */
@@ -7332,5 +7332,5 @@ display:none;
 
 
 .fc-nonbusiness {
-  background: #929292 !important; 
+  background: #929292 !important;
 }
